syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/andreistefanciprian/gomicropay/payments/proto/pb";

service PaymentsService {
    rpc Authorize(AuthorizePayload) returns (AuthorizeResponse);
    rpc Capture(CapturePayload) returns (google.protobuf.Empty);
    rpc CheckBalance(CheckBalancePayload) returns (CheckBalanceResponse);
    rpc CreateAccount(CreateAccountPayload) returns (google.protobuf.Empty);
}

message AuthorizePayload {
    string customerEmailAddress = 1;
    string merchantEmailAddress = 2;
    int64 cents = 3;
    string currency = 4;
}

message CapturePayload {
    string pid = 1;
}

message AuthorizeResponse {
    string pid = 1;
}

message CheckBalancePayload {
    string emailAddress = 1;
}

message CheckBalanceResponse {
    int64 balanceCents = 1;
}

enum WalletType {
    CUSTOMER = 0;
    MERCHANT = 1;
}

message CreateAccountPayload {
    string emailAddress = 1;
    WalletType walletType = 2;
    string initialBalanceCurrency = 3;
    int64 initialBalanceCents = 4;
}
